<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_info">A quiz game that test your knowledge of shows from the 2010s. This game may be difficult for some. You have been warned.</string>
    <string name="app_name">2010s Kids Show Quiz</string>
    <string name="correct_toast">You are correct!</string>
    <string name="incorrect_toast">You are incorrect!</string>
    <string name="info_becoming">Becoming Us is an American reality series that aired on the Freeform network. It ran for 1 season in 2015.</string>
    <string name="info_breadwinner">Breadwinner is an American animated comedy series that aired on Nickelodeon. It ran for 2 seasons in 2014-2016</string>
    <string name="info_buckets">Kirby Buckets is an American adventure series that aired on Disney XD. It ran for 3 seasons in 2014-2017.</string>
    <string name="info_bug">"Bug Juice: My Adventures at Camp is an American reality series that aired on Disney Channel. It ran for 1 season in 2018. It's also a revival of the original show that ran from 1998 to 2001."</string>
    <string name="info_bunsen">Bunsen is a Beast is an American animated comedy-adventure series that aired on Nickelodeon. It ran for 1 season in 2017-2018</string>
    <string name="info_diddo">"I Didn't Do It is an American comedy series that aired on Disney Channel. It ran for 1 season from 2014-2015"</string>
    <string name="info_dwarf">The 7D is an American animated fantasy-comedy series that aired on Disney XD. It ran for 2 seasons in 2014-2016.</string>
    <string name="info_epic">"Bucket and Skinner's Epic Adventure is an American teen sitcom series that aired on Nickelodeon. It ran for 1 season in 2011-2013"</string>
    <string name="info_freak">Freak Out is an American reality series that aired on the Freeform network. It ran for 1 season in 2014-2015</string>
    <string name="info_friends">Best Friends Whenever is an American comedy series that aired on Disney Channel. It ran for 2 seasons from 2015-2016</string>
    <string name="info_gamer">"The Gamer's Guide is an American comedy series that aired on Disney XD. It ran for 2 seasons in 2015-2017."</string>
    <string name="info_georgia">State of Georgia is an American half-hour multi-cam comedy series that aired on the Freeform network. It ran for 1 season in 2011</string>
    <string name="info_huge">Huge is an American drama series that aired on the Freeform network. It ran for 1 season in 2010</string>
    <string name="info_jane">Jane by Design is an American comedy-drama series that aired on the Freeform network. It ran for 1 season in 2012</string>
    <string name="info_kidding">Just Kidding is an Canadian live-action hidden camera reality series that aired on Disney XD. It ran for 3 seasons in 2012-2014.</string>
    <string name="info_level">Level Up is an American live-action science-fiction fantasy-adventure series that aired on Cartoon Network. It ran for 2 seasons in 2012-2013</string>
    <string name="info_marvin">Marvin Marvin is an American science-fiction slapstick comedy series that aired on Nickelodeon. It ran for 1 season in 2012-2013</string>
    <string name="info_mixels">Mixels is an American animated comedy-fantasy series that aired on Cartoon Network. It ran for 2 seasons in 2014-2016</string>
    <string name="info_moguls">Middle School Moguls is an American series that aired on Nickelodeon. It ran for 1 season in 2019</string>
    <string name="info_motor">Motorcity is an American animated science-fiction car series that aired on Disney XD. It ran for 1 season in 2012-2013.</string>
    <string name="info_plank">Walk the Prank is an American comedy-prank series that aired on Disney XD. It ran for 3 seasons from 2016 to 2018</string>
    <string name="info_problem">The Problem Solverz is an American animated comedy-mystery series that aired on Cartoon Network. It ran for 2 seasons in 2011-2013</string>
    <string name="info_random">"So Random is an American sketch comedy series that aired on Disney Channel. It ran for 1 season from 2011-2012. It's a spin-off of Sonny with a Chance"</string>
    <string name="info_ravenwood">"Ravenwood is an American teen horror-drama mystery-thriller series that aired on the Freeform network. It ran for 1 season in 2013-2014. It's also a spin-off from Pretty Little Liars"</string>
    <string name="info_rex">Generator Rex is an American animated science-fiction and comedy series that aired on Cartoon Network. It ran for 3 seasons in 2010-2013</string>
    <string name="info_robotomy">Robotomy is an American animated action series that aired on Cartoon Network. It ran for 1 season in 2010-2011</string>
    <string name="info_sheen">Planet Sheen is a spin-off series from Jimmy Neutron Boy Genius. It aired on Nickelodeon for 1 season from 2010-2011</string>
    <string name="info_symbionic">Sym-Bionic Titan is an American animated action science fiction series that aired on Cartoon Network. It ran for 1 season in 2010-2011</string>
    <string name="info_tower">Tower Prep is a Canadian/American live-action science-fiction comedy-drama series that aired on Cartoon Network. It ran for 1 season in 2010</string>
    <string name="info_twisted">Twisted is an American teen drama mystery-thriller series that aired on the Freeform network. It ran for 1 season in 2013-2014</string>
    <string name="info_wayne">Welcome to the Wayne is an American animated science-fantasy and comedy-adventure series that aired on Nickelodeon. It ran for 2 seasons in 2017-2019</string>
    <string name="question_becoming">Becoming Us</string>
    <string name="question_breadwinner">Breadwinner</string>
    <string name="question_buckets">Kirby Buckets</string>
    <string name="question_bug">Bug Juice: My Adventures at Camp</string>
    <string name="question_bunsen">Bunsen is a Beast</string>
    <string name="question_diddo">"I Didn't Do It"</string>
    <string name="question_dwarf">The 7D</string>
    <string name="question_epic">"Bucket and Skinner's Epic Adventure"</string>
    <string name="question_freak">Freak Out</string>
    <string name="question_friends">Best Friends Whenever</string>
    <string name="question_gamer">"The Gamer's Guide"</string>
    <string name="question_georgia">State of Georgia</string>
    <string name="question_huge">Huge</string>
    <string name="question_jane">Jane by Design</string>
    <string name="question_kidding">Just Kidding</string>
    <string name="question_level">Level Up</string>
    <string name="question_marvin">Marvin Marvin</string>
    <string name="question_mixels">Mixels</string>
    <string name="question_moguls">Middle School Moguls</string>
    <string name="question_motor">Motorcity</string>
    <string name="question_plank">Walk the Prank</string>
    <string name="question_problem">The Problem Solverz</string>
    <string name="question_random">So Random</string>
    <string name="question_ravenwood">Ravenwood</string>
    <string name="question_rex">Generator Rex</string>
    <string name="question_robotomy">Robotomy</string>
    <string name="question_sheen">Planet Sheen</string>
    <string name="question_symbionic">Sym-Bionic Titan</string>
    <string name="question_tower">Tower Prep</string>
    <string name="question_twisted">Twisted</string>
    <string name="question_wayne">Welcome to the Wayne</string>
    <string name="quiz_end">End of Quiz</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="start_button">start_button</string>
    <string name="close_string">Close</string>
    <string name="sound_description">An image of a speaker used to control background music</string>
    <string name="Disney_logo_description">The blue and yellow Disney Channel logo that was used between 2010-2014</string>
    <string name="nick_logo_description">The orange Nickelodeon splash logo with liitle circles</string>
    <string name="cartoon_logo_description">The black and white alternating Cartoon Network logo with block letters</string>
    <string name="freeform_logo_description">The Freeform logo with green letter used between 2016 and 2018</string>
</resources>