<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/pattern">

    <TextView android:textSize="30.0sp"
        android:textStyle="bold"
        android:textColor="#ffffffcc"
        android:id="@+id/app_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />
    <Space android:layout_width="fill_parent" android:layout_height="30.0dip" />
    <TextView android:textSize="25.0sp"
        android:textColor="#000000"
        android:id="@+id/app_info_text_view"
        android:background="@drawable/border2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_info"
        android:layout_gravity="center"
        android:gravity="center|right"
        android:textAlignment="center"/>
    <Space android:layout_width="fill_parent" android:layout_height="20.0dip" />
    <Button android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz" />

</LinearLayout>