<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/river">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="-170dp"
        android:layout_marginLeft="-170dp">

        <ImageView
            android:id="@+id/sound_button"
            android:src="@drawable/sound_on"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:contentDescription="@string/sound_description"/>
    </LinearLayout>
   <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowSpan="1"
            android:background="@drawable/border">

            <TextView android:textSize="30.0sp"
                android:textColor="#ff000000"
                android:textAlignment="center"
                android:id="@+id/timer_text_view"
                android:padding="24.0dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowSpan="1">
            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowSpan="1"
            android:background="@drawable/border">
            <TextView android:textSize="30.0sp"
                android:textColor="#00ff00"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/question_text_view"
                android:padding="24.0dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </GridLayout>
    <Space android:layout_width="fill_parent" android:layout_height="20.0dip" />
    <GridLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:padding="0dp">
        <ImageView android:id="@+id/disney_button"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:src="@drawable/disney"
            android:paddingBottom="15dp"
            android:contentDescription="@string/Disney_logo_description"/>
        <ImageView android:id="@+id/nick_button"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:src="@drawable/nickelodeon"
            android:contentDescription="@string/nick_logo_description"/>
        <ImageView android:id="@+id/cartoon_button"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:src="@drawable/cartoon"
            android:contentDescription="@string/cartoon_logo_description"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>
        <ImageView android:id="@+id/freeform_button"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:src="@drawable/freeform"
            android:contentDescription="@string/freeform_logo_description"/>
    </GridLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <TextView android:textSize="35.0sp"
        android:textStyle="bold"
        android:textColor="#ffffff00"
        android:id="@+id/score_text_view"
        android:padding="24.0dip"
        android:background="@drawable/border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>